tm: nav menu overflow scroll fix

--- a/assets/css/v20Style.less
+++ b/assets/css/v20Style.less
@@ -1158,6 +1158,9 @@ ul.vct-nav-menu {
   padding: 0;
   li {
     display: block;
+    &:last-child{
+      margin-bottom: 60px;
+    }
     a {
       font-weight: 500;
       letter-spacing: 0.4px;
