--- a/assets/css/v20Style_d.less
+++ b/assets/css/v20Style_d.less
@@ -1151,6 +1151,9 @@ transform: translateX(12px);
     padding: 0;
     li {
       display: block;
+      &:last-child{
+        margin-bottom: 60px;
+      }
       a{
           font-weight: 500;
           letter-spacing: .4px;
